Enable monolithic deploy & serve SPA via backend
Add SPA/static serving and Vercel config adjustments for a monolithic deployment. server.py: add handlers to serve standalone-frontend/index.html (searching multiple locations), provide a styled fallback HTML when frontend is missing, and a catch-all SPA route that skips API/static paths. .vercelignore: clean up comments, include standalone-backend in the deployment (negated entry) and tidy sections. standalone-frontend/package.json: ensure build copies index.html into dist/index.html. vercel.json: change build/install behavior for this setup, set framework to null, update rewrites to route non-API requests to the API entry, and add a global Access-Control-Allow-Origin header. These changes make the app runnable as a single deploy on Vercel with proper SPA routing and CORS support.

--- a/.vercelignore
+++ b/.vercelignore
@@ -11,7 +11,7 @@ __pycache__/
 *.so
 .Python
 
-# Node modules (if any)
+# Node modules
 node_modules/
 
 # IDE
@@ -31,20 +31,22 @@ Thumbs.db
 *.backup
 *.bak
 
-# Documentation (not needed for deployment)
+# Documentation
 docs/
-*.md
 
-# Scripts (not needed for deployment)
+# Scripts
 scripts/
 
-# Demo data generation (not needed for deployment)
+# Data generation
 data/
 
-# Old backend folder (using standalone-backend instead)
+# Old backend
 backend/
 
-# Environment files (Vercel handles env vars)
+# Environment files
 .env
 .env.local
 .env.*.local
+
+# Include standalone-backend (needed for API)
+!standalone-backend/
