Simplify Vercel Python config and index app import
Remove manual virtualenv site-packages insertion from api/index.py and simplify the FastAPI import/fallback handling (add JSONResponse import and clarify comments). Update vercel.json to use the @vercel/python builder with a builds entry and a routes mapping to api/index.py, removing legacy install/output/framework/rewrites fields and a redundant headers block. These changes align the repo with Vercel's Python runtime conventions and simplify deployment configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
   "version": 2,
   "name": "evangelism-crm-demo",
-  "installCommand": "chmod +x install.sh && ./install.sh",
-  "outputDirectory": ".",
-  "framework": null,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index.py"
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
     }
   ],
   "headers": [
@@ -25,15 +28,6 @@
         {
           "key": "Access-Control-Allow-Headers",
           "value": "Content-Type, Authorization"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
         }
       ]
     }
