Rename demo church to Dependify Gospel
Rebrand the demo instance from "Grace Evangelical Ministries" to "Dependify Gospel Centre". Update demo credentials, example role emails (admin@dependifygospel.demo and role-based addresses), contact info (info@dependifygospel.ng, https://dependifygospel.ng), voice agent text, package author, and various display strings across docs, READMEs, backend, frontend, data population scripts, standalone server, and startup scripts to keep the demo identity consistent.

--- a/standalone-frontend/package.json
+++ b/standalone-frontend/package.json
@@ -8,6 +8,6 @@
     "build": "mkdir -p dist && cp index.html dist/index.html"
   },
   "keywords": ["evangelism", "crm", "church", "demo"],
-  "author": "Grace Evangelical Ministries",
+  "author": "Dependify Gospel Centre",
   "license": "MIT"
 }
